--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -5,4 +5,26 @@
 @import 'variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import '../../node_modules/bootstrap/scss/bootstrap';
+
+.alert {
+  z-index: 99;
+  top: 60px;
+  right: 18px;
+  min-width: 30%;
+  position: fixed;
+  animation: slide 0.5s forwards;
+}
+
+@keyframes slide {
+  100% {
+    top: 30px;
+  }
+}
+
+@media screen and (max-width: 668px) {
+  .alert { /* center the alert on small screens */
+    left: 10px;
+    right: 10px;
+  }
+}
