Application style repairing

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,7 @@
 @import "shared/header";
 @import "partials/navbar";
 @import "partials/card";
+@import "partials/checkout";
 @import "shared/footer";
 // Partials
 @import "partials/icons";
