added box-shadow effect

--- a/resources/sass/partials/card.scss
+++ b/resources/sass/partials/card.scss
@@ -13,6 +13,7 @@
   text-align: center;
   background: #FFFFFF;
   border: 1px solid #ececf6;
+  box-shadow: 1px 7px 7px 0px #00000021;
 }
 
 .card-img-container {
